fix signOn Function | add swagger and autogen config | add users and insomnia config json as ref
