# config/swagger.json
@@ -8,7 +8,11 @@
   "servers": [
     {
       "url": "http://localhost:3000/",
-      "description": "Local server"
+      "description": "LocalSqlite server"
+    },
+    {
+      "url": "http://localhost:5668/",
+      "description": "Local Postgress server"
     },
     {
       "url": "https://libroverse-production.up.railway.app/",
@@ -412,7 +416,7 @@
           }
         ]
       },
-      "patch": {
+      "put": {
         "tags": [
           "Users"
         ],
@@ -582,7 +586,7 @@
           "Users"
         ],
         "summary": "Sign up",
-        "description": "",
+        "description": "API to sign up",
         "parameters": [],
         "responses": {
           "201": {
@@ -593,15 +597,18 @@
           }
         },
         "requestBody": {
+          "in": "body",
+          "required": true,
+          "type": "object",
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "membersince": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/Users"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/Users"
               }
             }
           }
